Fixed language and made template non-personal.

--- a/src/ads/header.tex
+++ b/src/ads/header.tex
@@ -41,8 +41,8 @@
 \input{lang/\documentLanguage}
 
 % Load language specific babel package
-\iflang{de}{\usepackage[english, ngerman]{babel}}
-\iflang{en}{\usepackage[ngerman, english]{babel}}
+\iflang{de}{\usepackage[ngerman, english]{babel}}
+\iflang{en}{\usepackage[english, ngerman]{babel}}
 
 % Add comment feature
 \newcommand{\comment}[1]{\par {\bfseries \color{blue} #1 \par}}
