--- a/src/lang/de.tex
+++ b/src/lang/de.tex
@@ -28,6 +28,10 @@
 \newcommand{\listListingPhrase}{Quellcodeverzeichnis}
 \newcommand{\authorListingPhrase}{Code}
 \newcommand{\acronymsPhrase}{Abkürzungsverzeichnis}
+\renewcommand{\contentsname}{Inhaltsverzeichnis}
+\renewcommand{\listfigurename}{Abbildungsverzeichnis}
+\renewcommand{\listtablename}{Tabellenverzeichnis}
+
 
 \newcommand{\documentTypePhrase}{%
   \IfStrEqCase{\documentType}{%
