--- a/src/settings/document.tex
+++ b/src/settings/document.tex
@@ -11,15 +11,15 @@
 \newcommand{\documentType}{T3\_XXXX}
 
 \newcommand{\multipleAuthors}{false}
-\newcommand{\documentAuthor}{Vivian Berger}
+\newcommand{\documentAuthor}{Vorname Nachname}
 \newcommand{\documentTitle}{Titel der Arbeit}
 \newcommand{\documentPeriod}{X Wochen}
 
-\newcommand{\matriculationNumber}{9549720}
+\newcommand{\matriculationNumber}{XXXXXXX}
 
 \newcommand{\locationUniversity}{Heidenheim}
 \newcommand{\department}{Informatik}
-\newcommand{\course}{HDH-TINF2022}
+\newcommand{\course}{Kursname}
 
 \newcommand{\degree}{Bachelor of Science}
 % INF2014 - INF2016 (MI):       Bachelor of Science
@@ -32,12 +32,12 @@
 \newcommand{\showLecture}{false}
 
 \newcommand{\releaseDate}{XX.XX.20XX}
-\newcommand{\releaseLocation}{Ulm}
+\newcommand{\releaseLocation}{Ort}
 
-\newcommand{\companyName}{Mercedes-Benz Tech Innovation GmbH}
-\newcommand{\companyLocation}{Ulm}
+\newcommand{\companyName}{Firma GmbH}
+\newcommand{\companyLocation}{Ort}
 
-\newcommand{\tutor}{Elmar Schug}
+\newcommand{\tutor}{1. Gutachter}
 \newcommand{\evaluator}{2. Gutachter}
 
 \newcommand{\linkColor}{0000AF}
