--- a/src/ads/header.tex
+++ b/src/ads/header.tex
@@ -41,7 +41,7 @@
 \input{lang/\documentLanguage}
 
 % Load language specific babel package
-\iflang{de}{\usepackage[ngerman, english]{babel}}
+\iflang{de}{\usepackage[ngerman]{babel}}
 \iflang{en}{\usepackage[english, ngerman]{babel}}
 
 % Add comment feature
